--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-course",
   "version": "1.0.0",
   "description": "webpack course",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
@@ -18,5 +18,8 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
